feat: replay main classes from derived launch templates
Completes the server-side half of run/test/debug slice 12.7. The push side
already derived `.lathe/<rel>/main-launch.json` in `lathe:sync`; the server can
now read that template and replay a `main` class from `.lathe/` bytecode, with
no Maven, mirroring the existing test-replay path.

What:
- Add `run.MainLaunchReader`: reads `main-launch.json` fresh and lock-aware into
  `MainLaunchData`, mirroring `LaunchTemplateReader`.
- Add `CompletenessGate.verify(MainLaunchData)`: an overload that gates a main
  launch's module/class path presence before spawning. The shared path-collection
  and per-module check are factored into a private `verify(List<String>, Path)`
  so the test and main entry points cannot drift.
- Collapse `Launcher` to a single `launch(argv, resultsSink, onLine, onResult)`.
  The test and main callers in `WorkspaceSession` now build their own argv via
  `LaunchPlan.forTest`/`forMain` and own the results-sink decision — a `main` run
  passes a null sink and a no-op result consumer, since it emits no JUnit event
  stream.
- Add `WorkspaceSession.runMainFuture` / `launchMain`: read -> gate -> launch ->
  stream stdout/stderr, registered in `activeRuns` so the existing
  `lathe.run.cancel` reaches a main run unchanged. Extract a shared `completeRun`
  that both the test and main exit handlers use, flattening the old nested
  if/else into a guard clause.
- Expose the `lathe.run.main` command through `LatheWorkspaceService`,
  `LatheTextDocumentService`, and the server's `ExecuteCommandOptions`.

Why:
- A `main` run needs the module's runtime launch, which is neither the test nor
  the compile launch and is not captured from any fork; the plugin derives it
  Maven-side, and the server stays a pure reader of `.lathe/`.
- The completeness gate refuses to launch against an incomplete image, the most
  dangerous failure mode for a run (green result on the wrong bytecode).

Program args remain `List.of()` fo